--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "homepage": "https://github.com/catalinmiron/react-native-css-gradient#readme",
   "main": "index.js",
   "dependencies": {
-    "gradient-parser": "0.1.5"
+    "gradient-parser": "0.1.5",
+    "react-native-linear-gradient": "^2.5.6"
   },
   "peerDependencies": {
     "expo": "*",
